# ds_lending_club

./: .env_template  .gitignore  README.md  config.yaml  makefile  pyproject.toml
docs/: glossary.md
libs/evaluation/: evaluation.py
libs/feature_dataset/: __init__.py  feature_dataset.py
libs/processing/: data_splitter.py  deep_feature_synthesis.py
notebooks/: 01_look_dataset.ipynb  02_cleaned_data.ipynb  02_eda.ipynb  03_eda_baseline.ipynb  03_feature_processing.ipynb  04.5_hypertunning.ipynb  04_training.ipynb  05_calibration.ipynb  06_inference.ipynb  07_full_training.ipynb  eda_andre.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
tests/libs/feature_store/: test_feature_store.py
