[project]
name = "lending-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arfs>=2.3.3",
    "boruta>=0.4.3",
    "catboost>=1.2.7",
    "duckdb>=1.1.3",
    "featuretools>=1.31.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "optuna>=4.2.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "shap>=0.46.0",
    "xgboost>=2.1.3",
    "mlflow>=1.27.0",
]
